[package]
name = "krpc-rs"
version = "0.1.0"
authors = ["Bart Slinger <bartslinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["net", "time", "io-util"] }
prost = "0.8"

[build-dependencies]
prost-build = { version = "0.8" }