[package]
name = "krpc-rs"
version = "0.1.0"
authors = ["Bart Slinger <bartslinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "krpc_rs"
path = "src/krpc/lib.rs"

[[bin]]
name = "beun"
path = "src/beun/main.rs"

[dependencies]
tokio = { version = "1.9.0", features = ["net", "sync", "time", "io-util", "macros", "rt-multi-thread"] }
prost = "0.8"

[build-dependencies]
prost-build = { version = "0.8" }
krpc-gen-rs = { path = "/home/bart/git/ksp/krpc-gen-rs" }